# AgePred

./: .gitignore  README.md  benchmark_models.py  gemini_inference.py  inference.py  main.py  pyproject.toml  run_all_data_inference.py
core/: config.py
results/: predictions_benchmark.csv
utils/: data_transformation.py
