[project]
name = "age-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.20.0",
    "insightface>=1.0.1",
    "matplotlib>=3.10.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.9.0",
    "opencv-python>=4.10.0.0",
]
